--- a/docker-compose-wordpress.yml
+++ b/docker-compose-wordpress.yml
@@ -2,30 +2,66 @@
 #waarschijnlijk niet nodig?
 #van: https://docs.docker.com/compose/wordpress/#build-the-project
 
-version: '3'
+version: '3.1'
 
 services:
    db:
      image: mysql:5.7
      volumes:
        - db_data:/var/lib/mysql
-     restart: always
-     environment:
-       MYSQL_ROOT_PASSWORD: somewordpress
-       MYSQL_DATABASE: wordpress
-       MYSQL_USER: wordpress
-       MYSQL_PASSWORD: wordpress
-
+     #restart: always
+     # environment:
+       # MYSQL_ROOT_PASSWORD: somewordpress
+       # MYSQL_DATABASE: wordpress
+       # MYSQL_USER: wordpress
+       # MYSQL_PASSWORD: wordpress
+ #    deploy:
+ #      restart_policy:
+ #        condition: on-failure
+     networks:
+       - wordpress_network
+     secrets:
+       - MYSQL_ROOT_PASSWORD
+       - MYSQL_DATABASE
+       - MYSQL_USER
+       - MYSQL_PASSWORD
+       
    wordpress:
      depends_on:
        - db
      image: wordpress:latest
      ports:
        - "8000:80"
-     restart: always
-     environment:
-       WORDPRESS_DB_HOST: db:3306
-       WORDPRESS_DB_USER: wordpress
-       WORDPRESS_DB_PASSWORD: wordpress
+#     restart: always
+     # environment:
+       # WORDPRESS_DB_HOST: db:3306
+       # WORDPRESS_DB_USER: wordpress
+       # WORDPRESS_DB_PASSWORD: wordpress
+     networks:
+       - wordpress_network
+     secrets:
+       - WORDPRESS_DB_HOST
+       - WORDPRESS_DB_USER
+       - WORDPRESS_DB_PASSWORD
 volumes:
     db_data:
+
+networks:
+  wordpress_network:
+    external: true
+    
+secrets:
+  MYSQL_ROOT_PASSWORD:
+    external: true
+  MYSQL_DATABASE:
+    external: true
+  MYSQL_USER:
+    external: true
+  MYSQL_PASSWORD:
+    external: true
+  WORDPRESS_DB_HOST:
+    external: true
+  WORDPRESS_DB_USER:
+    external: true
+  WORDPRESS_DB_PASSWORD:
+    external: true
